tests/compile-fail/panic.rs
//error-pattern: the evaluated program panicked

fn main() {
    assert_eq!(5, 6);
}
